--- a/app/templates/image.html
+++ b/app/templates/image.html
@@ -5,6 +5,6 @@
    </head>
 
    <body>
-      <img src="/static/scalr.png" alt="Girl in a jacket" width="700" height="600">
+      <img src="/static/scalr.jpg" alt="Girl in a jacket" width="700" height="600">
    </body>
 </html>
