--- a/app/templates/main_page.html
+++ b/app/templates/main_page.html
@@ -1,5 +1,6 @@
 <html>
-<h1>Lets try something!)</h1>
+<h3>Please enter your last name
+    and see what is your's table!)</h3>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>{{ form.last_name.label }}<br>
