Added searching functional

--- a/app/templates/main_page.html
+++ b/app/templates/main_page.html
@@ -11,5 +11,6 @@
         </p>
     <p>{{ form.search() }}</p>
     </form>
+<img src="/static/scalr.jpg" alt="Girl in a jacket" width="700" height="600">
 
 </html>
