Added scaling image

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <img src="/static/scalr.jpg" alt="Girl in a jacket" width="700" height="600">}
+    <img src="/static/scalr.jpg" >
 
 
 {% endblock %}
