--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,13 @@
 <html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        img {
+            width: 100%;
+            max-width: 100%;
+        }
+    </style>
+</head>
 <body>
 <div>
     <a href="{{ ('/home') }}">Home</a>
