--- a/app/templates/search_result.html
+++ b/app/templates/search_result.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Great! Table number {{ our_table }}. Please look at the picture
+    <h2>Great! Table number {{ our_table }}. Please, look at the picture
     </h2>
 <img src="/static/scalr.jpg">
 {% endblock %}
